
[project]
name = "coin-catchers-bot"
version = "0.1.0"
description = "Telegram bot for analyzing and auto-buying cryptocurrency tokens based on quality filters"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
    "web3>=6.0.0",
    "python-dotenv>=1.0.0",
    "solana>=0.30.0",
    "requests>=2.31.0",
    "asyncio>=3.4.3",
    "base58>=2.1.1",
    "telegram>=0.0.1",
]
